# simpleRenderer

./: CMakeLists.txt  Mesh.cpp  Mesh.h  frame.h  main.cpp  simpleRender.cpp  simpleRender.h
